[gd_scene load_steps=2 format=3 uid="uid://species_slot"]

[ext_resource type="Script" path="res://scripts/species_slot.gd" id="1_script"]

[node name="SpeciesSlot" type="Button"]
custom_minimum_size = Vector2(200, 200)
script = ExtResource("1_script")

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="SpriteContainer" type="CenterContainer" parent="VBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="Sprite" type="TextureRect" parent="VBox/SpriteContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
expand_mode = 1
stretch_mode = 5

[node name="NameLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
horizontal_alignment = 1

[node name="CountLabel" type="Label" parent="VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 14
horizontal_alignment = 1

[node name="Undiscovered" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1, 0.1, 0.1, 0.9)

[node name="QuestionMark" type="Label" parent="Undiscovered"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -40.0
offset_right = 30.0
offset_bottom = 40.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 64
text = "?"
horizontal_alignment = 1
vertical_alignment = 1
